# cake-mystery

./: .gitignore  README.md  main.py  pyproject.toml  settings.toml  who_ate_the_cake.txt
cake_mystery/: character.py  game.py
